[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skrubview"
dynamic = ["version"]
description = 'visualize dataframe content'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jerome Dockes", email = "jerome@dockes.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "polars",
  "pandas",
  "pyarrow",
  "jinja2",
  "rich",
  "matplotlib",
  "numpy",
  "dataframe-api-compat",
]

[project.optional-dependencies]
test = [
  "pytest",
  "beautifulsoup4",
  "tox",
]


[project.scripts]
skrubview = "skrubview:run"

[tool.hatch.version]
path = "src/skrubview/__init__.py"
